goodreads mysql schema created

--- a/Files/SearchEngine_TFIDF/searchEngine_TFIDF.ipynb
+++ b/Files/SearchEngine_TFIDF/searchEngine_TFIDF.ipynb
@@ -375,8 +375,8 @@
    "metadata": {},
    "source": [
     "- Getting the top matches based on\n",
-    "  - Similarity score (top 10)\n",
-    "  - then sorting by `ratings_count`"
+    "  - Similarity score (top 30)\n",
+    "  - NOT sorting by `ratings_count`"
    ]
   },
   {
