Study Done Pandas Data Export for efficient data stream

--- a/Files/Database/insert_item_data.ipynb
+++ b/Files/Database/insert_item_data.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from configparser import ConfigParser\n",
-    "from mysql.connector import MySQLConnection,Error"
+    "from mysql.connector import MySQLConnection,Error\n"
    ]
   },
   {
@@ -77,6 +77,13 @@
     "    \n",
     "cn,cs=connect(creds=read(filename=\"config.ini\",section=\"mysql\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
