stream wise data loading implemented in searchEngine

--- a/Files/SearchEngine_TFIDF/searchEngine_TFIDF.ipynb
+++ b/Files/SearchEngine_TFIDF/searchEngine_TFIDF.ipynb
@@ -23,6 +23,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
+    "import gzip\n",
+    "import json\n",
+    "import gc\n",
     "import joblib\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
@@ -41,9 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reading the json data into a dataframe\n",
+    "# help stream the data without unzipping the file\n",
+    "# stream the data by one line at a time\n",
     "\n",
-    "items = pd.read_json(\"../Datasets/Processed/itemDetails_RatingCount_gt15.json\")"
+    "with gzip.open(\"../Datasets/Processed/itemDetails_RatingCount_gt15.json.gz\") as f:\n",
+    "    line = f.readline()"
    ]
   },
   {
@@ -54,10 +59,198 @@
     {
      "data": {
       "text/plain": [
-       "(1302659, 18)"
+       "b'{\"isbn\":\"\",\"average_rating\":4.03,\"similar_books\":[\"19997\",\"828466\",\"1569323\",\"425389\",\"1176674\",\"262740\",\"3743837\",\"880461\",\"2292726\",\"1883810\",\"1808197\",\"625150\",\"1988046\",\"390170\",\"2620131\",\"383106\",\"1597281\"],\"description\":\"Omnibus book club edition containing the Ladies of Madrigyn and the Witches of Wenshar.\",\"link\":\"https:\\\\/\\\\/www.goodreads.com\\\\/book\\\\/show\\\\/7327624-the-unschooled-wizard\",\"authors\":[{\"author_id\":\"10333\",\"role\":\"\"}],\"publisher\":\"Nelson Doubleday, Inc.\",\"num_pages\":\"600\",\"publication_day\":\"\",\"publication_month\":\"\",\"publication_year\":\"1987\",\"isbn13\":\"\",\"url\":\"https:\\\\/\\\\/www.goodreads.com\\\\/book\\\\/show\\\\/7327624-the-unschooled-wizard\",\"image_url\":\"https:\\\\/\\\\/images.gr-assets.com\\\\/books\\\\/1304100136m\\\\/7327624.jpg\",\"book_id\":\"7327624\",\"ratings_count\":140,\"title\":\"The Unschooled Wizard (Sun Wolf and Starhawk, #1-2)\",\"mod_title\":\"the unschooled wizard sun wolf and starhawk 12\"}\\r\\n'"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'isbn': '',\n",
+       " 'average_rating': 4.03,\n",
+       " 'similar_books': ['19997',\n",
+       "  '828466',\n",
+       "  '1569323',\n",
+       "  '425389',\n",
+       "  '1176674',\n",
+       "  '262740',\n",
+       "  '3743837',\n",
+       "  '880461',\n",
+       "  '2292726',\n",
+       "  '1883810',\n",
+       "  '1808197',\n",
+       "  '625150',\n",
+       "  '1988046',\n",
+       "  '390170',\n",
+       "  '2620131',\n",
+       "  '383106',\n",
+       "  '1597281'],\n",
+       " 'description': 'Omnibus book club edition containing the Ladies of Madrigyn and the Witches of Wenshar.',\n",
+       " 'link': 'https://www.goodreads.com/book/show/7327624-the-unschooled-wizard',\n",
+       " 'authors': [{'author_id': '10333', 'role': ''}],\n",
+       " 'publisher': 'Nelson Doubleday, Inc.',\n",
+       " 'num_pages': '600',\n",
+       " 'publication_day': '',\n",
+       " 'publication_month': '',\n",
+       " 'publication_year': '1987',\n",
+       " 'isbn13': '',\n",
+       " 'url': 'https://www.goodreads.com/book/show/7327624-the-unschooled-wizard',\n",
+       " 'image_url': 'https://images.gr-assets.com/books/1304100136m/7327624.jpg',\n",
+       " 'book_id': '7327624',\n",
+       " 'ratings_count': 140,\n",
+       " 'title': 'The Unschooled Wizard (Sun Wolf and Starhawk, #1-2)',\n",
+       " 'mod_title': 'the unschooled wizard sun wolf and starhawk 12'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to parse the required attributes from the book or item details\n",
+    "\n",
+    "def parse_fields(line):\n",
+    "    data = json.loads(line)\n",
+    "    return {\n",
+    "        'isbn': data['isbn'],\n",
+    "        'average_rating': data['average_rating'],\n",
+    "        'similar_books': data['similar_books'],\n",
+    "        'description': data['description'],\n",
+    "        'link': data['link'],\n",
+    "        'authors': data['authors'],\n",
+    "        'publisher': data['publisher'],\n",
+    "        'num_pages': data['num_pages'],\n",
+    "        'publication_day': data['publication_day'],\n",
+    "        'publication_month': data['publication_month'],\n",
+    "        'publication_year': data['publication_year'],\n",
+    "        'isbn13': data['isbn13'],\n",
+    "        'url': data['url'],\n",
+    "        'image_url': data['image_url'],\n",
+    "        'book_id': data['book_id'],\n",
+    "        'ratings_count': data['ratings_count'],\n",
+    "        'title': data['title'],\n",
+    "        'mod_title': data['mod_title'],\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we will go through all the books from the dataset\n",
+    "\n",
+    "books = []\n",
+    "\n",
+    "with gzip.open(\"../Datasets/Processed/itemDetails_RatingCount_gt15.json.gz\") as f:\n",
+    "    while True:\n",
+    "        # reading the line\n",
+    "        line = f.readline()\n",
+    "\n",
+    "        # we will break the infinite loop when we reach the end of the dataset file\n",
+    "        if not line:\n",
+    "            break\n",
+    "        \n",
+    "        # parsing the line\n",
+    "        fields = parse_fields(line)\n",
+    "        \n",
+    "        # trying to convert ratings_count into integer\n",
+    "        try:\n",
+    "            ratings_count = int(fields[\"ratings_count\"])\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "\n",
+    "        books.append(fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1302659"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# total number of books\n",
+    "\n",
+    "len(books)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we will create a data frame\n",
+    "\n",
+    "items = pd.DataFrame.from_dict(books)\n",
+    "\n",
+    "# we don't need this object anymore\n",
+    "\n",
+    "del(books)\n",
+    "\n",
+    "# to clear the variable from memory we can use the gc.collect() method\n",
+    "\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1302659, 18)"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +487,7 @@
        "4                               the devils notebook  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
