--- a/Files/Datasets/DatasetExploration/exp_goodreads_books_json.ipynb
+++ b/Files/Datasets/DatasetExploration/exp_goodreads_books_json.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "4                               The Devil's Notebook  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "318555"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "780998            928  Second Glance  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "1302659"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,35 +1278,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exporting the data as compressed json "
+    "### Exporting the data as compressed json - After Processing 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export DataFrame to JSON with one line per record\n",
+    "# Compress the JSON string and write to a gzip file\n",
     "\n",
-    "json_data = items.to_json(orient='records', lines=True)"
+    "with gzip.open('../Processed/itemDetails_RatingCount_gt15_p1.json.gz', 'wt', encoding='utf-8') as file:\n",
+    "    file.write(items.to_json(orient='records', lines=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compress the JSON string and write to a gzip file\n",
+    "# execution stop point\n",
     "\n",
-    "with gzip.open('../Processed/itemDetails_RatingCount_gt15.json.gz', 'wt', encoding='utf-8') as file:\n",
-    "    file.write(json_data)"
+    "10/0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37931\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can observe that some titles are in language other than english\n",
+    "# during cleaning the mod_title becomes \" \"\n",
+    "# we will drop those records as well\n",
+    "\n",
+    "print(len(items[items[\"mod_title\"].str.len() == 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([     28,      37,      38,      43,      65,      72,      85,     118,\n",
+       "           175,     198,\n",
+       "       ...\n",
+       "       1308680, 1308686, 1308691, 1308697, 1308789, 1308850, 1308854, 1308881,\n",
+       "       1308931, 1308940],\n",
+       "      dtype='int64', length=37931)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting the index of those records\n",
+    "\n",
+    "items_drop = items[items[\"mod_title\"].str.len() == 1].index\n",
+    "items_drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1264728\n",
+      "1264728\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can crossccheck the net number of books that we will get after dropping the records\n",
+    "\n",
+    "print(len(items.drop(index=items_drop)))\n",
+    "print(1302659 - 37931)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1264728, 18)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dropping the records\n",
+    "\n",
+    "items.drop(index=items_drop, inplace=True)\n",
+    "\n",
+    "items.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting the data as compressed json - After Processing 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export DataFrame to JSON with one line per record\n",
+    "# Compress the JSON string and write to a gzip file\n",
+    "\n",
+    "with gzip.open('../Processed/itemDetails_RatingCount_gt15_p2.json.gz', 'wt', encoding='utf-8') as file:\n",
+    "    file.write(items.to_json(orient='records', lines=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# execution stop point\n",
+    "\n",
+    "10/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1315,15 +1441,15 @@
        "b'{\"isbn\":\"\",\"average_rating\":4.03,\"similar_books\":[\"19997\",\"828466\",\"1569323\",\"425389\",\"1176674\",\"262740\",\"3743837\",\"880461\",\"2292726\",\"1883810\",\"1808197\",\"625150\",\"1988046\",\"390170\",\"2620131\",\"383106\",\"1597281\"],\"description\":\"Omnibus book club edition containing the Ladies of Madrigyn and the Witches of Wenshar.\",\"link\":\"https:\\\\/\\\\/www.goodreads.com\\\\/book\\\\/show\\\\/7327624-the-unschooled-wizard\",\"authors\":[{\"author_id\":\"10333\",\"role\":\"\"}],\"publisher\":\"Nelson Doubleday, Inc.\",\"num_pages\":\"600\",\"publication_day\":\"\",\"publication_month\":\"\",\"publication_year\":\"1987\",\"isbn13\":\"\",\"url\":\"https:\\\\/\\\\/www.goodreads.com\\\\/book\\\\/show\\\\/7327624-the-unschooled-wizard\",\"image_url\":\"https:\\\\/\\\\/images.gr-assets.com\\\\/books\\\\/1304100136m\\\\/7327624.jpg\",\"book_id\":\"7327624\",\"ratings_count\":140,\"title\":\"The Unschooled Wizard (Sun Wolf and Starhawk, #1-2)\",\"mod_title\":\"the unschooled wizard sun wolf and starhawk 12\"}\\r\\n'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# opening gzip file streaming fashion\n",
+    "# testing the file  => opening gzip file streaming fashion\n",
     "\n",
-    "with gzip.open('../Processed/itemDetails_RatingCount_gt15.json.gz') as file:\n",
+    "with gzip.open('../Processed/itemDetails_RatingCount_gt15_p1.json.gz') as file:\n",
     "    line = file.readline()\n",
     "\n",
     "line"
@@ -1331,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1499,7 @@
        " 'mod_title': 'the unschooled wizard sun wolf and starhawk 12'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
