TFIDF SearchEngine Database Integrated

--- a/Docs/BasicMethodsStudy/basicMethodsStudy.ipynb
+++ b/Docs/BasicMethodsStudy/basicMethodsStudy.ipynb
@@ -550,6 +550,29 @@
     "\n",
     "items"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading larege file data efficiently"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
