--- a/Datasets/EDA_Wrangling/goodreads_books_json.ipynb
+++ b/Datasets/EDA_Wrangling/goodreads_books_json.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring goodreads_books.json.gz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modules"
+    "**Modules**"
    ]
   },
   {
