--- a/Research_Study/HelpingCode/general.ipynb
+++ b/Research_Study/HelpingCode/general.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pandas export json such that we can read by line (streaming fashion) and parse one line at a time during import - No Compression - 126 bytes"
+    "#### Pandas export json such that we can read by line (streaming fashion) and parse one line(means 1 record) at a time during import - No Compression - 126 bytes"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pandas export json such that we can read by line (streaming fashion) and parse one line at a time during import - gzip Compression - 89 bytes"
+    "#### Pandas export json such that we can read by line (streaming fashion) and parse one line(means 1 record) at a time during import - gzip Compression - 89 bytes"
    ]
   },
   {
@@ -555,23 +555,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading larege file data efficiently"
+    "### Pandas checking duplicates while ignoring some columns\n",
+    "- If you want to check for duplicate records while ignoring specific columns, you can use the duplicated method along with the subset parameter. \n",
+    "- The subset parameter allows you to specify the columns that should be used to identify duplicates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>IsDuplicate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>David</td>\n",
+       "      <td>40</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID     Name  Age  IsDuplicate\n",
+       "0   1    Alice   25        False\n",
+       "1   2      Bob   30        False\n",
+       "2   3  Charlie   35        False\n",
+       "3   1    Alice   25         True\n",
+       "4   4    David   40        False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame\n",
+    "data = {'ID': [1, 2, 3, 1, 4],\n",
+    "        'Name': ['Alice', 'Bob', 'Charlie', 'Alice', 'David'],\n",
+    "        'Age': [25, 30, 35, 25, 40]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Check for duplicates while ignoring the 'Age' column\n",
+    "duplicate_rows = df.duplicated(subset=['ID', 'Name'])\n",
+    "\n",
+    "# Display the DataFrame with a new column indicating duplicate status\n",
+    "df['IsDuplicate'] = duplicate_rows\n",
+    "\n",
+    "# Display the DataFrame with duplicate status\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you have a large number of columns to ignore, you can use the difference method to get the list of columns to check for duplicates.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>IsDuplicate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>David</td>\n",
+       "      <td>40</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID     Name  Age  IsDuplicate\n",
+       "0   1    Alice   25        False\n",
+       "1   2      Bob   30        False\n",
+       "2   3  Charlie   35        False\n",
+       "3   1    Alice   25        False\n",
+       "4   4    David   40        False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_to_ignore = ['Age']\n",
+    "columns_to_check = df.columns.difference(columns_to_ignore)\n",
+    "\n",
+    "duplicate_rows = df.duplicated(subset=columns_to_check)\n",
+    "df['IsDuplicate'] = duplicate_rows\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
