react frontend implemented - Stable

--- a/Application/Backend/BM25_gensim/script.ipynb
+++ b/Application/Backend/BM25_gensim/script.ipynb
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "print(to_json(data[0][:3]))"
+    "print(allbooks_to_json(data[0][:3]))"
    ]
   },
   {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,54 +213,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('the goblet',),\n",
-       " ('harry potter and the goblet of fire',),\n",
-       " ('the golden goblet',),\n",
-       " ('the goblet club',),\n",
-       " ('harry potter the goblet of fire harry potter 4',),\n",
-       " ('mark reads harry potter and the goblet of fire',),\n",
-       " ('harry potter and the goblet of fire harry potter 4',)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"id\": 0,\n",
+      "        \"book_title_mod\": \"The Goblet\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 1,\n",
+      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 2,\n",
+      "        \"book_title_mod\": \"The Golden Goblet\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 3,\n",
+      "        \"book_title_mod\": \"The Goblet Club\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 4,\n",
+      "        \"book_title_mod\": \"Harry Potter & the Goblet of Fire (Harry Potter, #4)\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 5,\n",
+      "        \"book_title_mod\": \"Mark Reads Harry Potter and the Goblet of Fire\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 6,\n",
+      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire (Harry Potter, #4)\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 7,\n",
+      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire (Harry Potter #4)\"\n",
+      "    }\n",
+      "]\n"
+     ]
     }
    ],
    "source": [
-    "(titles[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['the goblet',\n",
-       " 'harry potter and the goblet of fire',\n",
-       " 'the golden goblet',\n",
-       " 'the goblet club',\n",
-       " 'harry potter the goblet of fire harry potter 4',\n",
-       " 'mark reads harry potter and the goblet of fire',\n",
-       " 'harry potter and the goblet of fire harry potter 4']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "to_list(titles[0])"
+    "print(alltitles_to_json(titles[0]))"
    ]
   }
  ],
