API code updated

--- a/Application/Backend/BM25_gensim/script.ipynb
+++ b/Application/Backend/BM25_gensim/script.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Importing trained model**"
+    "**Importing trained models and other data**"
    ]
   },
   {
@@ -54,8 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary = get_pkl_file(path=\"./ModelMemory/dictionary.pkl\",mode=\"rb\")\n",
-    "bm25_index = get_pkl_file(path=\"./ModelMemory/bm25_index.pkl\",mode=\"rb\")"
+    "dictionary = joblib.load(\"./ModelMemory/title_without_series_dictionary.joblib\")\n",
+    "bm25_index = joblib.load(\"./ModelMemory/title_without_series_matrix.joblib\")\n",
+    "tfidf_model = joblib.load(\"./ModelMemory/title_without_series_tfidf_bnn.joblib\")"
    ]
   },
   {
@@ -88,7 +89,11 @@
    "source": [
     "query_str = \"goblet fire\"\n",
     "\n",
-    "indices = bm25_top_hits(query=query_str, dictionary=dictionary, bm25_index=bm25_index, n=30)\n",
+    "indices = bm25_top_hits(query=query_str,\n",
+    "                        tfidf_model=tfidf_model,\n",
+    "                        bm25_index=bm25_index,\n",
+    "                        dictionary=dictionary, \n",
+    "                        n=30)\n",
     "indices"
    ]
   },
@@ -204,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -223,35 +228,31 @@
       "[\n",
       "    {\n",
       "        \"id\": 0,\n",
-      "        \"book_title_mod\": \"The Goblet\"\n",
+      "        \"book_title_mod\": \"the goblet\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 1,\n",
-      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire\"\n",
+      "        \"book_title_mod\": \"harry potter and the goblet of fire\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 2,\n",
-      "        \"book_title_mod\": \"The Golden Goblet\"\n",
+      "        \"book_title_mod\": \"the golden goblet\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 3,\n",
-      "        \"book_title_mod\": \"The Goblet Club\"\n",
+      "        \"book_title_mod\": \"the goblet club\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 4,\n",
-      "        \"book_title_mod\": \"Harry Potter & the Goblet of Fire (Harry Potter, #4)\"\n",
+      "        \"book_title_mod\": \"harry potter the goblet of fire harry potter 4\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 5,\n",
-      "        \"book_title_mod\": \"Mark Reads Harry Potter and the Goblet of Fire\"\n",
+      "        \"book_title_mod\": \"mark reads harry potter and the goblet of fire\"\n",
       "    },\n",
       "    {\n",
       "        \"id\": 6,\n",
-      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire (Harry Potter, #4)\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 7,\n",
-      "        \"book_title_mod\": \"Harry Potter and the Goblet of Fire (Harry Potter #4)\"\n",
+      "        \"book_title_mod\": \"harry potter and the goblet of fire harry potter 4\"\n",
       "    }\n",
       "]\n"
      ]
