cusmod and api code updated

--- a/Application/Backend/BM25_gensim/script.ipynb
+++ b/Application/Backend/BM25_gensim/script.ipynb
@@ -72,29 +72,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1670907, 1594932,  499731, 1137526, 1395431,  994463, 2087728,\n",
-       "       1621212,   30633, 1096036,   75470, 1351654,  802742, 1898516,\n",
-       "        398866, 1184608, 1660455, 1665463, 2057185,  638492,  662041,\n",
-       "         31695, 1834824, 2065708,  624087, 2015402,  179140, 1617514,\n",
-       "       1825843,  416478], dtype=int64)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "query_str = \"goblet fire\"\n",
+    "query_str = \" \"\n",
     "\n",
     "indices = bm25_top_hits(query=query_str,\n",
     "                        tfidf_model=tfidf_model,\n",
     "                        bm25_index=bm25_index,\n",
     "                        dictionary=dictionary, \n",
     "                        n=30)\n",
-    "indices"
+    "print(indices)"
    ]
   },
   {
@@ -108,9 +101,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "data  = get_data_by_index(indices=indices,cs=cs)"
+    "data  = get_data_by_index(indices=indices,cs=cs)\n",
+    "\n",
+    "print(data)"
    ]
   },
   {
@@ -122,81 +125,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "    {\n",
-      "        \"book_id\": 1670907,\n",
-      "        \"gr_book_id\": 17125270,\n",
-      "        \"title_without_series\": \"The Goblet\",\n",
-      "        \"mod_title\": \"the goblet\",\n",
-      "        \"title\": \"The Goblet\",\n",
-      "        \"mod_title_without_series\": \"the goblet\",\n",
-      "        \"description\": \"While on a family trip to Israel, Sarah hasn't discovered just any goblet; she has come into possession of something not of this world. Something of Jesus's very own. The trip had been rocky so far. Sarah's husband, Bill, was distant as ever, and her son, Alex, is disagreeable as usual. Once Sarah gets the goblet, though, everything starts to Change. All of a sudden, Alex is enthusiastic about family events. Sarah soon comes to learn that this is no coincidence. Life starts to change back home as well. Sarah and her children go to church the first Sunday at home-which is a feat in itself-only to discover that Sarah's singing voice is inspiring everyone. The church goers all around her turn and are moved by Sarah's angelic voice, and she joins the church band. Everything is going right for Sarah. Well, almost everything. Her children are making better decisions, the church band is really taking off, but her husband still isn't living up to his obligations. In fact, Sarah discovers evil forces are at work in him, and he is trying to steal the goblet. On a last-minute trip back to Israel, can Sarah save the precious relic before Bill does the unthinkable? Find out in The Goblet.\",\n",
-      "        \"ratings_count\": 19,\n",
-      "        \"average_rating\": 3.16,\n",
-      "        \"num_pages\": 196,\n",
-      "        \"publication_day\": 27,\n",
-      "        \"publication_month\": 11,\n",
-      "        \"publication_year\": 2012,\n",
-      "        \"isbn\": \"1621478734\",\n",
-      "        \"isbn13\": \"9781621478737\",\n",
-      "        \"publisher\": \"Tate Publishing & Enterprises\",\n",
-      "        \"country_code\": \"US\",\n",
-      "        \"language_code\": \"\",\n",
-      "        \"url\": \"https://www.goodreads.com/book/show/17125270-the-goblet\",\n",
-      "        \"image_url\": \"https://images.gr-assets.com/books/1356112197m/17125270.jpg\",\n",
-      "        \"link\": \"https://www.goodreads.com/book/show/17125270-the-goblet\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"book_id\": 1594932,\n",
-      "        \"gr_book_id\": 17861465,\n",
-      "        \"title_without_series\": \"Harry Potter and the Goblet of Fire\",\n",
-      "        \"mod_title\": \"harry potter and the goblet of fire\",\n",
-      "        \"title\": \"Harry Potter and the Goblet of Fire\",\n",
-      "        \"mod_title_without_series\": \"harry potter and the goblet of fire\",\n",
-      "        \"description\": \"Harry Potter is midway through both his training as a wizard and his coming of age. Harry wants to get away from the pernicious Dursleys and go to the International Quidditch Cup with Hermione, Ron, and the Weasleys. He wants to dream about Cho Chang, his crush (and maybe do more than dream). He wants to find out about the mysterious event that supposed to take place at Hogwarts this year, an event involving two other rival schools of magic, and a competition that hasn't happened for hundreds of years. He wants to be a normal, fourteen-year-old wizard. But unfortunately for Harry Potter, he's not normal - even by wizarding standards.\\nAnd in his case, different can be deadly.\",\n",
-      "        \"ratings_count\": 174,\n",
-      "        \"average_rating\": 4.53,\n",
-      "        \"num_pages\": 21,\n",
-      "        \"publication_day\": 29,\n",
-      "        \"publication_month\": 3,\n",
-      "        \"publication_year\": 2012,\n",
-      "        \"isbn\": \"1781102554\",\n",
-      "        \"isbn13\": \"9781781102558\",\n",
-      "        \"publisher\": \"Pottermore\",\n",
-      "        \"country_code\": \"US\",\n",
-      "        \"language_code\": \"eng\",\n",
-      "        \"url\": \"https://www.goodreads.com/book/show/17861465-harry-potter-and-the-goblet-of-fire\",\n",
-      "        \"image_url\": \"https://images.gr-assets.com/books/1379716227m/17861465.jpg\",\n",
-      "        \"link\": \"https://www.goodreads.com/book/show/17861465-harry-potter-and-the-goblet-of-fire\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"book_id\": 499731,\n",
-      "        \"gr_book_id\": 28754622,\n",
-      "        \"title_without_series\": \"Harry Potter and the Goblet of Fire\",\n",
-      "        \"mod_title\": \"harry potter and the goblet of fire\",\n",
-      "        \"title\": \"Harry Potter and the Goblet of Fire\",\n",
-      "        \"mod_title_without_series\": \"harry potter and the goblet of fire\",\n",
-      "        \"description\": \"Harry Potter is midway through both his training as a wizard and his coming of age. Harry wants to get away from the pernicious Dursleys and go to the International Quidditch Cup with Hermione, Ron, and the Weasleys. He wants to dream about Cho Chang, his crush (and maybe do more than dream). He wants to find out about the mysterious event that supposed to take place at Hogwarts this year, an event involving two other rival schools of magic, and a competition that hasn't happened for hundreds of years. He wants to be a normal, fourteen-year-old wizard. But unfortunately for Harry Potter, he's not normal - even by wizarding standards.\\nAnd in his case, different can be deadly.\",\n",
-      "        \"ratings_count\": 3314,\n",
-      "        \"average_rating\": 4.53,\n",
-      "        \"num_pages\": 0,\n",
-      "        \"publication_day\": 0,\n",
-      "        \"publication_month\": 0,\n",
-      "        \"publication_year\": 0,\n",
-      "        \"isbn\": \"\",\n",
-      "        \"isbn13\": \"\",\n",
-      "        \"publisher\": \"\",\n",
-      "        \"country_code\": \"US\",\n",
-      "        \"language_code\": \"eng\",\n",
-      "        \"url\": \"https://www.goodreads.com/book/show/28754622-harry-potter-and-the-goblet-of-fire\",\n",
-      "        \"image_url\": \"https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png\",\n",
-      "        \"link\": \"https://www.goodreads.com/book/show/28754622-harry-potter-and-the-goblet-of-fire\"\n",
-      "    }\n",
-      "]\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
+    "# if data is None\n",
+    "\n",
+    "print(allbooks_to_json(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(allbooks_to_json(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m[:\u001b[38;5;241m3\u001b[39m]))\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# if data is not None\n",
+    "\n",
     "print(allbooks_to_json(data[0][:3]))"
    ]
   },
@@ -209,15 +167,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "titles  = get_titles_by_index(indices=indices,cs=cs)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -225,40 +174,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "    {\n",
-      "        \"id\": 0,\n",
-      "        \"book_title_mod\": \"the goblet\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 1,\n",
-      "        \"book_title_mod\": \"harry potter and the goblet of fire\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 2,\n",
-      "        \"book_title_mod\": \"the golden goblet\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 3,\n",
-      "        \"book_title_mod\": \"the goblet club\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 4,\n",
-      "        \"book_title_mod\": \"harry potter the goblet of fire harry potter 4\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 5,\n",
-      "        \"book_title_mod\": \"mark reads harry potter and the goblet of fire\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"id\": 6,\n",
-      "        \"book_title_mod\": \"harry potter and the goblet of fire harry potter 4\"\n",
-      "    }\n",
-      "]\n"
+      "None\n"
      ]
     }
    ],
    "source": [
+    "titles  = get_titles_by_index(indices=indices,cs=cs)\n",
+    "print(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if title is None\n",
+    "print(alltitles_to_json(titles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(alltitles_to_json(\u001b[43mtitles\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# if title is not None\n",
     "print(alltitles_to_json(titles[0]))"
    ]
   }
